syntax = "proto3";

package rsk;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";
import "transcript.proto";


option go_package = "github.com/warmans/rsk-search/server/gen/api";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0";
  };
  external_docs: {
    url: "https://scrimpton.com";
    description: "Search transcriptions";
  };
  schemes: HTTP;
};
service SearchService {

  // search

  rpc Search(SearchRequest) returns (SearchResultList) {
    option (google.api.http) = {
      get: "/api/search"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "search",
      summary: "Perform a search"
      tags: "search"
    };
  }

  rpc GetMetadata(google.protobuf.Empty) returns (Metadata) {
    option (google.api.http) = {
      get: "/api/metadata"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "getMetadata",
      summary: "Search related metadata (searchable fields, available publications etc.)"
      tags: "search"
    };
  }

  rpc ListFieldValues(ListFieldValuesRequest) returns (FieldValueList) {
    option (google.api.http) = {
      get: "/api/values/{field}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "listFieldValues",
      summary: "Get a list of values for the given keyword field"
      tags: "search"
    };
  }

  rpc PredictSearchTerm(PredictSearchTermRequest) returns (SearchTermPredictions) {
    option (google.api.http) = {
      get: "/api/search/predict-terms"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "predictSearchTerm",
      summary: "Predict the search term being typed similar to auto-complete."
      tags: "search"
    };
  }

  // changelogs
  rpc ListChangelogs(ListChangelogsRequest) returns (ChangelogList) {
    option (google.api.http) = {
      get: "/api/changelog"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      operation_id: "listChangelogs",
      summary: "Fetch list of changelogs"
      tags: "search"
    };
  }
}

message SearchRequest {
  string query = 1;
  int32 page = 2;
}

message SearchResultList {
  repeated SearchResult results = 1;
  int32 result_count = 2;
  map<string, SearchStats> stats = 3;
}

message SearchResult {
  ShortTranscript episode = 1;
  repeated DialogResult dialogs = 2;
}

message SearchStats  {
  repeated string labels = 2;
  repeated float values = 3;
}



message DialogResult {
  repeated Dialog transcript = 1;
  float score = 2;
}

message Metadata {
  repeated FieldMeta search_fields = 1;
  repeated string episode_short_ids = 2;
}

message FieldMeta {

  enum Kind {
    UNKNOWN = 0;
    IDENTIFIER = 1;
    KEYWORD = 2;
    KEYWORD_LIST = 3;
    TEXT = 4;
    INT = 5;
    FLOAT = 6;
    DATE = 7;
  }

  string name = 1;
  Kind kind = 2;
}

message ListFieldValuesRequest {
  string field = 1;
  string prefix = 2;
}

message FieldValueList {
  repeated FieldValue values = 1;
}

message FieldValue {
  string value = 1;
  int32 count = 2;
}

message PredictSearchTermRequest {
  string prefix = 1;
  int32 max_predictions = 2;
  string query = 3;
  bool exact = 4;
}

message SearchTermPredictions  {
  string prefix = 1;
  repeated Prediction predictions = 2;
}

message Prediction {
  string line = 1;
  reserved 2;
  string fragment = 3;
  string epid = 4;
  int32 pos = 5;
  string actor = 6;
}

message WordPosition {
  string word = 1;
  int32 start_pos = 2;
  int32 end_pos = 3;
}

message ListChangelogsRequest {
  string filter = 2;
  string sort_field = 3;
  string sort_direction = 4;
  int32 page = 5;
  int32 page_size = 6;
}

message ChangelogList {
  repeated Changelog changelogs = 1;
}

message Changelog {
  string date = 1;
  string content = 2;
}
